--- a/Authors.txt
+++ b/Authors.txt
@@ -1,6 +1,7 @@
-Authors/Maintainers:
+Main Authors/Maintainers:
   Dirk Beyer
   Erkan Keremoglu
+  Philipp Wendler
 
 Contributors:
   Gregor Endler (2009 - 2010)
@@ -8,8 +9,6 @@ Contributors:
   Andreas Holzer (2008 - 2010)
   Michael Tautschnig (2008 - 2009)
   Gregory Theoduloz (2009 - 2010)
-  Philipp Wendler (2009 - 2010)
-
 
 Bug reports:
   Dirk Beyer: CPAchecker-Users@sosy-lab.org
