fix url and mentioning of mailing list
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@1368 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/Authors.txt
+++ b/Authors.txt
@@ -10,6 +10,6 @@ Contributors:
   Michael Tautschnig (2008 - 2009)
   Gregory Theoduloz (2009 - 2010)
 
-Bug reports:
+Questions and bug reports:
   Dirk Beyer: CPAchecker-Users@sosy-lab.org
 
