--- a/Authors.txt
+++ b/Authors.txt
@@ -7,6 +7,8 @@ Contributors:
   Gregor Endler (2009 - 2010)
   Alberto Griggio (2008 - 2009)
   Andreas Holzer (2008 - 2010)
+  Stefan Löwe (2010)
+  Alexander von Rhein (2010)
   Michael Tautschnig (2008 - 2009)
   Gregory Theoduloz (2009 - 2010)
 
