Fix of typos, update of authors
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4351 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/Authors.txt
+++ b/Authors.txt
@@ -7,6 +7,7 @@ Contributors:
   Gregor Endler (2009 - 2010)
   Alberto Griggio (2008 - 2009)
   Andreas Holzer (2008 - 2010)
+  Steven Kieffer (2011)
   Stefan Löwe (2010)
   Alexander von Rhein (2010)
   Michael Tautschnig (2008 - 2009)
