--- a/Authors.txt
+++ b/Authors.txt
@@ -6,12 +6,16 @@ Main Authors/Maintainers:
 Contributors:
   Gregor Endler (2009 - 2010)
   Alberto Griggio (2008 - 2009)
-  Andreas Holzer (2008 - 2010)
+  Peter Häring (2011)
+  Andreas Holzer (2008 - 2011)
+  Michael Käufl (2011)
   Steven Kieffer (2011)
-  Stefan Löwe (2010)
+  Stefan Löwe (2010 - 2011)
   Alexander von Rhein (2010)
+  Andreas Stahlbauer (2011)
   Michael Tautschnig (2008 - 2009)
   Gregory Theoduloz (2009 - 2010)
+  Daniel Wonisch (2011)
 
 Questions and bug reports:
   Dirk Beyer: CPAchecker-Users@sosy-lab.org
