--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -39,7 +39,7 @@ Developing CPAchecker from within Eclipse
    Step 8 of the section "Running CPAchecker" above describes what can be entered here.
    The text box "VM arguments" needs to contain "-Djava.library.path=lib/native/<ENVIRONMENT>",
    where <ENVIRONMENT> is replaced with one of the following depending on your system:
-   		ppc-macosx, x86_64-linux, x86-linux, x86_64-macosx, x86-macosx,  x86-win32
+   		x86_64-linux, x86-linux, x86_64-macosx, x86-macosx,  x86-win32
 5. Optional: If you want to work with the source of Eclipse CDT, download
    http://download.eclipse.org/tools/cdt/releases/indigo/plugins/org.eclipse.cdt.core.source_5.3.1.201109151620.jar
    and put it into the lib/eclipse/ folder.
