--- a/Authors.txt
+++ b/Authors.txt
@@ -1,7 +1,7 @@
 Main Authors/Maintainers:
-  Dirk Beyer
-  Erkan Keremoglu
-  Philipp Wendler
+  Dirk Beyer (since 2007)
+  Stefan Löwe (since 2010)
+  Philipp Wendler (since 2009)
 
 Contributors:
   Gregor Endler (2009 - 2010)
@@ -9,13 +9,14 @@ Contributors:
   Peter Häring (2011)
   Andreas Holzer (2008 - 2011)
   Michael Käufl (2011)
+  Erkan Keremoglu (2008 - 2011)
   Steven Kieffer (2011)
-  Stefan Löwe (2010 - 2011)
   Alexander von Rhein (2010)
   Andreas Stahlbauer (2011)
   Michael Tautschnig (2008 - 2009)
   Gregory Theoduloz (2009 - 2010)
   Daniel Wonisch (2011)
+  Geoff Zenger (2007)
 
 Questions and bug reports:
   Dirk Beyer: CPAchecker-Users@sosy-lab.org
