Author list updated
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4671 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/Authors.txt
+++ b/Authors.txt
@@ -5,6 +5,7 @@ Main Authors/Maintainers:
 
 Contributors:
   Gregor Endler (2009 - 2010)
+  Karlheinz Friedberger (2011)
   Alberto Griggio (2008 - 2009)
   Peter Häring (2011)
   Andreas Holzer (2008 - 2011)
