--- a/Authors.txt
+++ b/Authors.txt
@@ -12,6 +12,7 @@ Contributors:
   Alberto Griggio (2008 - 2009), Simon Fraser University, Canada / University of Trento, Italy
   Peter Häring (2011), University of Passau, Germany
   Andreas Holzer (2008 - 2011), University of Darmstadt, Germany / TU Vienna, Austria
+  Marie-Christine Jakobs (2011), University of Paderborn, Germany
   Michael Käufl (2011), University of Passau, Germany
   Steven Kieffer (2011), Simon Fraser University, Canada
   Alexander von Rhein (2010), University of Passau, Germany
