Instead of a single zip file for all platforms, create a zip file for windows and a tar archive for the rest. Zip can't store the necessary permission bits (+x) for our script files.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@4812 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -11,7 +11,7 @@ Install CPAchecker -- Binary
    (e.g., Sun/Oracle JRE, OpenJDK).
    Cf. http://java.oracle.com/ or install a package from your distribution.
 
-2. Extract the content of the CPAchecker zip file into a directory of your choice.
+2. Extract the content of the CPAchecker zip or tar file into a directory of your choice.
 
 
 Install CPAchecker -- Source
