--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -32,6 +32,8 @@ Install CPAchecker -- Source
    URL (read-only mirror): http://cpachecker.googlecode.com/svn/trunk
 
 5. Run "ant" in CPAchecker directory to build CPAchecker.
+   When building CPAchecker for the first time, this will automatically
+   download all needed libraries.
 
 (For building CPAchecker within Eclipse, cf. doc/Developing.txt.)
 
