--- a/NEWS.txt
+++ b/NEWS.txt
@@ -1,2 +1,8 @@
 Changes since CPAchecker 1.1
 ----------------------------
+* r4960: If the #include directive of specification automata is used
+  with relative paths, the base directory of the relative path is now
+  the directory of the file which contains the #include,
+  not the CPAchecker root directory.
+  If you use #include with relative paths in your own specification files,
+  you will probably need to adjust them.
