Added some configurations and simple test programs for test suite generation; especially variability-aware test-suite generation.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/checkerInclTiger@18192 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/programs/tiger/with_presenceConditions/config/configuration_with_pc.properties
+++ b/test/programs/tiger/with_presenceConditions/config/configuration_with_pc.properties
@@ -34,7 +34,7 @@ cpa.predicate.useNondetFlags = true
 cpa.value.variableBlacklist = (\w)*__SELECTED_FEATURE_(\w)*
 limits.time.cpu = 3600s
 # the file is in the standard config directory
-tiger.algorithmConfigurationFile = ../../../../config/tiger-internal-algorithm---no-refiner.properties
+tiger.algorithmConfigurationFile = ../../../../../config/tiger-internal-algorithm---no-refiner.properties
 tiger.checkCoverage = true
 tiger.fqlQuery = COVER "EDGES(ID)*".EDGES(SETMINUS(@BASICBLOCKENTRY, UNION(@FUNC(cleanup), @FUNC(select_features), @FUNC(select_helpers), @FUNC(valid_product), @FUNC(setup), @FUNC(select_one), @FUNC(setup))))."EDGES(ID)*"
 tiger.limitsPerGoal.time.cpu = 900
